[package]
name = "anni-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anni-playback = { git = "https://github.com/ProjectAnni/anni.git", package = "anni-playback" }
anni-provider = { git = "https://github.com/ProjectAnni/anni.git", package = "anni-provider", default-features = false, features = ["priority"] }

symphonia = { git = "https://github.com/erikas-taroza/Symphonia", branch = "mp4-opus-improvements", default-features = false }

anyhow = "1.0.75"
# once_cell = "1.18.0"
# tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
# tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
# anni-repo = { git = "https://github.com/ProjectAnni/anni.git", package = "anni-repo", default-features = false }
uuid = "1.4.1"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "rustls-tls"] }
log = "0.4.20"
env_logger = "0.10.0"
