[package]
name = "anni-player"
version = "0.1.0"
edition = "2021"

[dependencies]
anni-playback = { git = "https://github.com/ProjectAnni/anni.git", package = "anni-playback" }
anni-provider = { git = "https://github.com/ProjectAnni/anni.git", package = "anni-provider", default-features = false, features = [
    "priority",
] }
symphonia = { version = "0.5.4", default-features = false, features = [
    # codecs
    "aac",
    "flac",
    # formats
    "ogg",
] }

anyhow = { version = "1.0.75", features = ["backtrace"] }
uuid = "1.4.1"
reqwest = { version = "0.11.20", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
log = "0.4.20"
env_logger = "0.10.0"
once_cell = "1"

[patch.crates-io]
cpal = { git = "https://github.com/sidit77/cpal.git", branch = "master" }
